# genshin-bot

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  bootstrap.py  config.py  dedup.py  errors.py  event_model.py  http.py  logging.py  plugin.py  router.py  runtime.py
app/adapters/: __init__.py  onebot.py
app/llm/: __init__.py  config.py  context.py  models.py  provider.py  routing.py  tracker.py
app/plugins/: chat.py  echo.py  genshin.py  help.py  llm_refresh.py  null.py  ping.py
app/providers/hoyolab/: __init__.py  models.py  provider.py
app/providers/staticdata/: provider.py
app/rate_limit/: __init__.py
app/session/: __init__.py
app/storage/: __init__.py  memory.py  sqlite.py
configs/: dev.json
docs/architecture/: qq-ai-bot-v1-module-breakdown.md  qq-ai-bot-v1-plan.md
tests/: conftest.py  test_application.py  test_chat_plugin.py  test_config.py  test_dedup.py  test_hoyolab_auth.py  test_llm_config.py  test_llm_provider.py  test_llm_routing.py  test_onebot.py  test_plugins_genshin.py  test_rate_limit.py  test_router.py  test_session.py  test_storage.py
